# ail-typo-squatting

./: .gitchangelog.rc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: check-domain.yml
ail_typo_squatting/: __init__.py  typo.py
ail_typo_squatting/conts/: main.py
ail_typo_squatting/dns_local/: resolving.py
ail_typo_squatting/etc/: dynamic-dns.json
ail_typo_squatting/format/: output.py  regex.py  yaml.py  yara.py
ail_typo_squatting/generator/: addDash.py  addDynamicDns.py  addTld.py  addition.py  changeDotDash.py  changeOrder.py  commonMisspelling.py  doubleReplacement.py  homoglyph.py  homophones.py  missingDot.py  numeralSwap.py  omission.py  repetition.py  replacement.py  singularPluralize.py  stripDash.py  subdomain.py  vowelSwap.py  wrongSld.py  wrongTld.py
ail_typo_squatting/generator/const/: main.py
ail_typo_squatting/generator/utils/: generator_functions.py  get_pathetc.py
ail_typo_squatting/utils/: parser.py
etc/: common-misspellings.json  dynamic-dns.json  homophones.txt  tlds-alpha-by-domain.txt
tests/: ail-project.org.txt  ail-project.org.var.txt  circl.lu.txt  circl.lu.var.txt  misp-project.org.txt  misp-project.org.var.txt  test.py
trash/: circl.lu.txt
