[tool.poetry]
name = "ail-typo-squatting"
version = "2.2.0"
description = "Generate list of domain name using Domain name permutation engine to feed AIL"
authors = [
	"David Cruciani <david.cruciani@securitymadein.lu>"
]
maintainers = [
	"Alexandre Dulaunoy <a@foo.be>",
	"Aurelien Thirion (terrtia) <aurelien.thirion@circl.lu>"
]
license = "BSD-2-Clause"
repository = "https://github.com/ail-project/ail-typo-squatting"

readme = "README.md"

keywords = [
	"typo-squatting",
	"typosquatting"
]

include = ["etc/*"]

[tool.poetry.dependencies]
python = "^3.6"
inflect = "^5.3.0"
dnspython = "^2.2.0"
pyyaml = "^6.0"
tldextract = "^3.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
