[tool.poetry]
name = "ail-typo-squatting"
version = "2.7.2"
description = "Generate list of domain name using Domain name permutation engine to feed AIL"
authors = [
	"David Cruciani <david.cruciani@securitymadein.lu>"
]
maintainers = [
	"Alexandre Dulaunoy <a@foo.be>",
	"Aurelien Thirion (terrtia) <aurelien.thirion@circl.lu>"
]
license = "BSD-2-Clause"
repository = "https://github.com/typosquatter/ail-typo-squatting"

readme = "README.md"

keywords = [
	"typo-squatting",
	"typosquatting"
]

include = ["etc/*"]

[tool.poetry.dependencies]
python = "^3.8"
inflect = "^5.3.0"
dnspython = "^2.2.1"
pyyaml = "^6.0.1"
tldextract = "^3.6.0"
requests = "^2.31.0"
retrie = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
